--- a/Ubiqutous/package.json
+++ b/Ubiqutous/package.json
@@ -31,6 +31,7 @@
     "expo-system-ui": "~4.0.9",
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
+    "google-search-results-nodejs": "^2.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.9",
