feat: Add Google Fonts and App Loading dependencies; update Home component to use custom fonts

--- a/Ubiqutous/app.json
+++ b/Ubiqutous/app.json
@@ -32,6 +32,22 @@
           "resizeMode": "contain",
           "backgroundColor": "#ffffff"
         }
+      ],
+      [
+        "expo-font",
+        {
+          "fonts": [
+            [
+              "node_modules/@expo-google-fonts/merriweather/Merriweather_300Light.ttf"
+            ],
+            [
+              "node_modules/@expo-google-fonts/inter/Inter_900Black.ttf"
+            ],
+            [
+              "node_modules/@expo-google-fonts/lora/Lora_500Medium.ttf"
+            ]
+          ]
+        }
       ]
     ],
     "experiments": {
