--- a/Ubiqutous/package.json
+++ b/Ubiqutous/package.json
@@ -15,10 +15,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.3.0",
+    "@expo-google-fonts/lora": "^0.3.0",
+    "@expo-google-fonts/merriweather": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.42",
+    "expo-app-loading": "^2.1.1",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
