--- a/Ubiqutous/package.json
+++ b/Ubiqutous/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/inter": "^0.3.0",
     "@expo-google-fonts/lora": "^0.3.0",
     "@expo-google-fonts/merriweather": "^0.3.0",
+    "@expo-google-fonts/open-sans": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
