--- a/Ubiqutous/package.json
+++ b/Ubiqutous/package.json
@@ -39,8 +39,11 @@
     "expo-web-browser": "~14.0.2",
     "firebase": "^11.6.0",
     "google-search-results-nodejs": "^2.1.0",
+    "i18next": "^25.1.3",
+    "i18next-browser-languagedetector": "^8.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-i18next": "^15.5.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
