--- a/Ubiqutous/package.json
+++ b/Ubiqutous/package.json
@@ -22,6 +22,7 @@
     "@expo-google-fonts/open-sans": "^0.3.0",
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.42",
