--- a/Ubiqutous/package.json
+++ b/Ubiqutous/package.json
@@ -25,6 +25,7 @@
     "@react-native-community/checkbox": "^0.5.20",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
+    "axios": "^1.9.0",
     "expo": "~52.0.42",
     "expo-app-loading": "^2.1.1",
     "expo-blur": "~14.0.3",
